<resources>
    <string name="app_name">Machining App</string>
    <string name="contour_milling">Contour Milling</string>
    <string name="slot_milling">Slot Milling</string>
    <string name="side_milling">Side Milling</string>
    <string name="ramping">Ramping</string>
    <string name="profile_question">Choose the cut profile:</string>
    <string name="input_details">Input Details</string>
    <string name="material">Material:</string>
    <string name="length_of_cut">Length of cut:</string>
    <string name="width_of_cut">Width of cut:</string>
    <string name="depth_of_cut">Depth of cut:</string>
    <string name="maximum_corner_radius">Maximum corner radius:</string>
    <string name="coolant">Coolant:</string>
    <string name="clamping">Clamping:</string>
    <string name="operation_type">Operation type:</string>
    <string name="machine">Machine:</string>
    <string name="find_tools">Find Tools</string>
    <string-array name="coolant_list">
        <item>None</item>
        <item>Air</item>
        <item>Emulsion</item>
        <item>Mist Spray</item>
    </string-array>
    <string-array name="clamping_list">
        <item>Unstable</item>
        <item>Normal</item>
        <item>Stable</item>
        <item>Very Stable</item>
    </string-array>
    <string-array name="operation_type_list">
        <item>Rough</item>
        <item>General</item>
        <item>Finish</item>
    </string-array>
    <string name="these_tools_are_usable">The following tools are able to perform your machining task:</string>
    <string name="optimising_instructions">To optimise your tool selection, please specify your desired weightings for the following parameters:</string>
    <string name="optimise_tools">Optimise Tools</string>
    <string name="tool_cutting_length">Cutting Length (mm)</string>
    <string name="tool_flute_number">No. of Flutes</string>
    <string name="tool_depth_per_pass">Cut depth per pass (mm)</string>
    <string name="tool_width_per_pass">Cut width per pass (mm)</string>
    <string name="family_name">Family Name</string>
    <string name="tool_diameter_mm">Tool Diameter (mm)</string>
    <string name="cutting_speed_m_min">Cutting Speed (m/min)</string>
    <string name="cutting_power_kw">Cutting Power (kW)</string>
    <string name="material_removal_rate_mm3_min">Material Removal Rate (mm3/min)</string>
    <string name="power_consumption">Minimise power consumption:</string>
    <string name="tool_life">Maximise tool life:</string>
    <string name="material_removal_rate">Maximise material removal rate:</string>
    <string name="surface_roughness">Minimise surface roughness:</string>
    <string name="shear_plane_deformation">Minimise shear deformation:</string>
    <string name="optimise_info">This application uses an algorithm to provide a recommendation for the best tool among many alternatives, based on different criteria. Weightings are used to determine the importance of one criteria over another. The influence of the criteria, such as minimising the power consumption, or maximising the material removal rate, can be changed based on the user\'s preference for the specific task. Note that the weightings are relative to each other, hence an equal weighting for all criteria will result in each criterion having an equal influence in the tool recommendation. For more information on the algorithm, known as TOPSIS, <a href='https://en.wikipedia.org/wiki/TOPSIS'> see the Wikipedia page.</a></string>

</resources>
