<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content">

    <TextView
        android:id="@+id/Name"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="Name"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Diameter"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="Diameter"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/CuttingLength"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/tool_cutting_length"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/FluteNumber"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/tool_flute_number"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/CutDepthPerPass"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/tool_depth_per_pass"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/CutWidthPerPass"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/tool_width_per_pass"
        android:textAlignment="center"
        android:textSize="16sp" />


</LinearLayout>