
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.nishen.machiningapp.Milling_task">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="368dp"
            android:layout_height="38dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_question"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:onClick="slotbutton"
            android:text="@string/slot_milling"
            app:layout_constraintLeft_toLeftOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:layout_constraintLeft_creator="1" />

        <Button
            android:id="@+id/button3"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/side_milling"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:layout_constraintLeft_creator="1" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:onClick="sendMessage"
            android:text="@string/contour_milling"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_constraintLeft_creator="1" />


        <Button
            android:id="@+id/button_ramp"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/ramping"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:layout_constraintLeft_creator="1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:onClick="slotbutton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/profile_slot" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:srcCompat="@drawable/profile_contour"
            android:layout_marginStart="24dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/profile_side"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            android:layout_marginEnd="24dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/profile_ramp"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>

