<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nishen.machiningapp.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:onClick="sendMessage"
        android:text="@string/face_milling"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_milling"
        android:layout_marginEnd="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/imageView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/side_milling"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ramping"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/imageView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/profile_face"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="136dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/profile_slot"
        android:layout_marginEnd="27dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/profile_side"
        app:layout_constraintRight_toLeftOf="@+id/imageView4"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/profile_ramp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginBottom="81dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_question"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
